# intel_ai

./: .gitignore  Dockerfile.airflow  Question.docx  README.md  docker-compose.yml  docker-composeold.txt  main.py  postgres.sql  pyproject.toml  requirements_backup.txt
docs/: architecture.md  database_architecture_diagram.md  databasedesign.md  evaluation_metrics.md  microservice_architecture_diagram.md  problem_statement.md  project_objectives.md  project_scope.md  services.md  target_user.md  technology_stack.md  week1_progress.md  weekly_plan.md  workflow_diagram.md
frontend/: app.py
frontend/pages/: 1_Dashboard.py  2_Company_Research.py  3_News_Intelligence.py  4_Risk_Analysis.py
services/etl-service/: test_alphanews.py
services/etl-service/app/dags/: new_etl_dag.py  stock_etl_dag.py
services/etl-service/app/database/: config.py  connection.py  models.py
services/etl-service/app/jobs/: load_news_data.py  load_stock_data.py  stock_ingestion.py
services/etl-service/app/report_ingestion_movedtoresearchservice/: pdf_parser.py  report_loader.py
services/news-service/: test_finbert.py
services/news-service/app/: main.py
services/news-service/app/database/: connection.py  models.py
services/news-service/app/routes/: news.py
services/news-service/app/sentiment/: finbert_model.py  sentiment_service.py
services/research-service/: create_tables.py  load_reports.py  main.py  seed_companies.py  test_chromadb.py  test_config.py  test_connection.py  test_neo.py
services/risk-service/app/: main.py
services/shared/database/: models.py
(+72 files in other folders)
