[project]
name = "intel-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "groq>=1.5.0",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.2.0",
    "newsapi-python>=0.2.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
